--- a/src/FieldCard.css
+++ b/src/FieldCard.css
@@ -21,7 +21,7 @@
 .field-card h3 {
     margin-top: 0;
     color: #333;
-    font-size: 20px;
+    font-size: 16px;
     
   }
   .field-info{
@@ -32,13 +32,15 @@
   .field-card h2{
     margin-top: 0;
     color: #666;
-    font-size: 20px;}
+    font-size: 16px;
+  }
 
   .field-title {
     margin-top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center; /* This ensures they are aligned in the middle vertically */
+   
   }
   
 .field-card p {
