--- a/src/FieldCard.css
+++ b/src/FieldCard.css
@@ -1,11 +1,11 @@
 .field-card {
     /* Apply general styling to the card */
     border-radius: 8px;
-    border: 1px solid #f0f2f5;
+    border: 1px solid #ddd;
     border-radius: 8px;
     cursor: pointer;
     transition: box-shadow 0.3s ease-in-out;
-    background-color:#f0f2f5;
+    background-color:#ffffff;
 }
 
 .field-card .ant-card-head-title {
@@ -26,7 +26,7 @@
   .field-info{
     margin-top: 1px;
     padding-top: 10px;
-    border-top: 1px solid #666;
+   
   }
   .field-card h2{
     margin-top: 0;
@@ -39,7 +39,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center; /* This ensures they are aligned in the middle vertically */
-   
+  
   }
   
 .field-card p {
