fixed bugs, added map boundry view for adding a new field

--- a/src/ChatComponent.css
+++ b/src/ChatComponent.css
@@ -60,9 +60,10 @@
   .messages {
     flex-grow: 1;
     overflow-y: auto;
+  
    
   }
-  
+  ::-webkit-scrollbar {display:none;}
   .message {
     display: flex;
     margin-bottom: 10px;
